--- a/idaotrack1.1.ipynb
+++ b/idaotrack1.1.ipynb
@@ -2,96 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "cabb569f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pymatgen\n",
-    "from pymatgen.core import Structure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "3b0e1dd2",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pymatgen\n",
-      "  Using cached pymatgen-2022.1.24-cp38-cp38-win_amd64.whl (3.0 MB)\n",
-      "Requirement already satisfied: requests in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (2.25.1)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (4.59.0)\n",
-      "Requirement already satisfied: Cython>=0.29.23 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (0.29.23)\n",
-      "Collecting pybtex\n",
-      "  Using cached pybtex-0.24.0-py2.py3-none-any.whl (561 kB)\n",
-      "Requirement already satisfied: sympy in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (1.8)\n",
-      "Requirement already satisfied: numpy>=1.20.1 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (1.20.1)\n",
-      "Collecting monty>=3.0.2\n",
-      "  Using cached monty-2022.1.19-py3-none-any.whl (65 kB)\n",
-      "Requirement already satisfied: pandas in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (1.2.4)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (1.6.2)\n",
-      "Collecting uncertainties>=3.1.4\n",
-      "  Using cached uncertainties-3.1.6-py2.py3-none-any.whl (98 kB)\n",
-      "Requirement already satisfied: networkx>=2.2 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (2.5)\n",
-      "Collecting spglib>=1.9.9.44\n",
-      "  Using cached spglib-1.16.3.tar.gz (699 kB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "    Preparing wheel metadata: started\n",
-      "    Preparing wheel metadata: finished with status 'done'\n",
-      "Requirement already satisfied: matplotlib>=1.5 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pymatgen) (3.3.4)\n",
-      "Collecting palettable>=3.1.1\n",
-      "  Using cached palettable-3.3.0-py2.py3-none-any.whl (111 kB)\n",
-      "Collecting tabulate\n",
-      "  Using cached tabulate-0.8.9-py3-none-any.whl (25 kB)\n",
-      "Collecting plotly>=4.5.0\n",
-      "  Using cached plotly-5.5.0-py2.py3-none-any.whl (26.5 MB)\n",
-      "Collecting ruamel.yaml>=0.15.6\n",
-      "  Using cached ruamel.yaml-0.17.20-py3-none-any.whl (109 kB)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from matplotlib>=1.5->pymatgen) (8.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from matplotlib>=1.5->pymatgen) (2.8.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from matplotlib>=1.5->pymatgen) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from matplotlib>=1.5->pymatgen) (2.4.7)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from matplotlib>=1.5->pymatgen) (1.3.1)\n",
-      "Requirement already satisfied: six in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from cycler>=0.10->matplotlib>=1.5->pymatgen) (1.15.0)\n",
-      "Requirement already satisfied: decorator>=4.3.0 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from networkx>=2.2->pymatgen) (5.0.6)\n",
-      "Collecting tenacity>=6.2.0\n",
-      "  Using cached tenacity-8.0.1-py3-none-any.whl (24 kB)\n",
-      "Collecting ruamel.yaml.clib>=0.2.6\n",
-      "  Using cached ruamel.yaml.clib-0.2.6-cp38-cp38-win_amd64.whl (117 kB)\n",
-      "Requirement already satisfied: future in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from uncertainties>=3.1.4->pymatgen) (0.18.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pandas->pymatgen) (2021.1)\n",
-      "Collecting latexcodec>=1.0.4\n",
-      "  Using cached latexcodec-2.0.1-py2.py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: PyYAML>=3.01 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from pybtex->pymatgen) (5.4.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from requests->pymatgen) (1.26.4)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from requests->pymatgen) (4.0.0)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from requests->pymatgen) (2.10)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from requests->pymatgen) (2020.12.5)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\dmih0\\anaconda\\lib\\site-packages (from sympy->pymatgen) (1.2.1)\n",
-      "Building wheels for collected packages: spglib\n",
-      "  Building wheel for spglib (PEP 517): started\n",
-      "  Building wheel for spglib (PEP 517): finished with status 'done'\n",
-      "  Created wheel for spglib: filename=spglib-1.16.3-cp38-cp38-win_amd64.whl size=125748 sha256=2cc8027ea272bec0421d1c8890d88202449e5c8d1e9a63903305da5ce9711368\n",
-      "  Stored in directory: c:\\users\\dmih0\\appdata\\local\\pip\\cache\\wheels\\9b\\9b\\40\\bf2dc763cedf922274badd2f0e18def364a34960f1c9ab0874\n",
-      "Successfully built spglib\n",
-      "Installing collected packages: tenacity, ruamel.yaml.clib, latexcodec, uncertainties, tabulate, spglib, ruamel.yaml, pybtex, plotly, palettable, monty, pymatgen\n",
-      "Successfully installed latexcodec-2.0.1 monty-2022.1.19 palettable-3.3.0 plotly-5.5.0 pybtex-0.24.0 pymatgen-2022.1.24 ruamel.yaml-0.17.20 ruamel.yaml.clib-0.2.6 spglib-1.16.3 tabulate-0.8.9 tenacity-8.0.1 uncertainties-3.1.6\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pymatgen"
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from pymatgen.core import Structure\n",
+    "from megnet.models import MEGNetModel\n",
+    "from megnet.data.crystal import CrystalGraph"
    ]
   },
   {
@@ -328,8 +251,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "9ef3cc3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_model(cutoff, lr):\n",
+    "    nfeat_bond = 10\n",
+    "    r_cutoff = cutoff\n",
+    "    gaussian_centers = np.linspace(0, r_cutoff + 1, nfeat_bond)\n",
+    "    gaussian_width = 0.8\n",
+    "    \n",
+    "    return MEGNetModel(\n",
+    "        graph_converter=CrystalGraph(cutoff=r_cutoff),\n",
+    "        centers=gaussian_centers,\n",
+    "        width=gaussian_width,\n",
+    "        loss=[\"MAE\"],\n",
+    "        npass=2,\n",
+    "        lr=lr,\n",
+    "        metrics=energy_within_threshold\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "015f076e",
+   "id": "25812392",
    "metadata": {},
    "outputs": [],
    "source": []
